Fase3/deployment-kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment-kafka
  namespace: squidgame
  labels:
    app: grpc-deployment-kafka
spec:
  selector:
    matchLabels:
      app: grpc-deployment-kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: grpc-deployment-kafka
    spec:
      hostname: grpc-pod-kafka
      containers:
        - image: alenav/rclient
          name: grpc-client
          ports:
            - containerPort: 5000
        - image: alenav/rservergo
          name: grpc-server
          ports:
            - containerPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscriber-deployment-kafka
  namespace: squidgame
  labels:
    app: subscriber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriber
  template:
    metadata:
      labels:
        app: subscriber
    spec:
      containers:
      - name: subscriber-cont
        image: alenav/rrsubscriber
