Fase3/backend-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-rust
spec:
  selector:
    matchLabels:
      app: backend-rust
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend-rust
        tier: backend
    spec:
      containers:
        - name: backend-rust
          image: "eantillon/backend_rust:latest"
          ports:
            - name: http-rust
              containerPort: 8080
            
---
apiVersion: v1
kind: Service
metadata:
  name: backendservice
spec:
  selector:
    app: backend-rust
    tier: backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http-rust
