Fase3/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: practica
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: practica
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: practica
        tier: frontend
        track: stable
    spec:
      containers:
      - name: nginx
        image: "eantillon/frontend_f3"
        ports:
        - containerPort: 80
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
      - name: backend-node
        image: "eantillon/backend_node:latest"
        ports:
          - name: http-node
            containerPort: 8080
