Fase3/services.yml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: grpc-deployment
  name: svc-rabbit
spec:
  type: ClusterIP
  selector: 
    app: grpc-deployment
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels: 
    app: grpc-deployment-kafka
  name: svc-kafka
spec:
  type: ClusterIP
  selector: 
    app: grpc-deployment-kafka
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
