Fase3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fase3
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-rabbit
            port:
              number: 5000
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-kafka
            port:
              number: 5000
